--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
         <img id = "coin" src = "sprites/coin.png" hidden>
 
         <script src="code.js"></script>
+
+        <h2>To control the zombie, use WASD!</h2>
+        <h2>To control the bush use IJKL!</h2>
     </body>
 </html>
